--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'Bulding.... (not actually doing something, but usually I would)'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
